# nife-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENDPOINT_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  OPTIONAL_FEATURES_COMPLETE.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  QUICK_RELEASE.md  README.md  README_NEW.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_STATUS.md  RELEASE_SUMMARY.sh  SECURITY.md  SETUP_GUIDE.md  USAGE_EXAMPLES.md  Usage_guide.md  check_api_schema.py  cleanup.sh  diagnose.py  diagrnose.sh  fix.sh  interactive_test.py  list_organizations.py  make_executable.sh  package.json  pyproject.toml  query_apps.py  query_nife_apps.py  release.sh  requirements.txt  run_server.sh  run_test.sh  setup.py  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml  release.yml
nife_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: app.py  main.py
src/nife_mcp_server/: __init__.py  __main__.py  app.py  client.py  intelligent_main.py  main.py  schema_manager.py
src/nife_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nife_mcp_server/nife_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nife_mcp_server/routes/: mcp.py  user.py
src/routes/: mcp.py
src/static/: index.html
