[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nife-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for Nife.io GraphQL API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "nife", "graphql", "ai", "claude"]
authors = [
  {name = "Nife Team", email = "support@nife.io"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "flask>=2.0.0",
  "flask-cors>=3.0.0",
  "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/nife-io/nife-mcp-server"
Documentation = "https://github.com/nife-io/nife-mcp-server#readme"
Repository = "https://github.com/nife-io/nife-mcp-server"
Issues = "https://github.com/nife-io/nife-mcp-server/issues"

[project.scripts]
nife-mcp-server = "nife_mcp_server.intelligent_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
