[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nife-mcp-server"
version = "1.0.4"
description = "Model Context Protocol server for Nife.io GraphQL API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "nife", "graphql", "ai", "claude"]
authors = [
  {name = "Nife Team", email = "support@nife.io"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.25.0",
  # Flask is only required if running the optional REST API (routes/mcp.py)
  # Remove the lines below if you only use the MCP stdio server.
  "flask>=2.0.0",
  "flask-cors>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/nifetency/nife-mcp-graphql"
Documentation = "https://github.com/nifetency/nife-mcp-graphql/blob/main/README.md"
Repository = "https://github.com/nifetency/nife-mcp-graphql"

[project.scripts]
nife-mcp-server = "nife_mcp_server.intelligent_main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
